--- a/Dusza-Fogadas/MainWindow.xaml
+++ b/Dusza-Fogadas/MainWindow.xaml
@@ -26,6 +26,10 @@
                 <Trigger Property="Height" Value="Auto">
                     <Setter Property="MinHeight" Value="20"/>
                 </Trigger>
+                <Trigger Property="IsFocused" Value="true">
+                    <Setter Property="BorderBrush" TargetName="Bd" Value="Black"/>
+                    <Setter Property="BorderThickness" Value="1.5"></Setter>
+                </Trigger>
             </ControlTemplate.Triggers>
         </ControlTemplate>
 
@@ -41,7 +45,9 @@
                 </Trigger>
                 <Trigger Property="IsFocused" Value="true">
                     <Setter Property="BorderBrush" TargetName="Bd" Value="Black"/>
+                    <Setter Property="BorderThickness" Value="1.5"></Setter>
                 </Trigger>
+                
             </ControlTemplate.Triggers>
         </ControlTemplate>
 
