--- a/Dusza-Fogadas/EndGame.xaml
+++ b/Dusza-Fogadas/EndGame.xaml
@@ -27,8 +27,8 @@
             </ControlTemplate.Triggers>
         </ControlTemplate>
     </Window.Resources>
-    
-    <Grid>
+
+    <Grid Background="#f5f5f5">
         <Grid.RowDefinitions>
             <RowDefinition Height="1.1*"></RowDefinition>
             <RowDefinition Height="0.9*"></RowDefinition>
