--- a/Dusza-Fogadas/NewGame.xaml
+++ b/Dusza-Fogadas/NewGame.xaml
@@ -52,7 +52,7 @@
 
 
 
-    <Grid>
+    <Grid Background="#f5f5f5">
         <Grid.RowDefinitions>
             <RowDefinition Height="1.3*"></RowDefinition>
             <RowDefinition Height="1*"></RowDefinition>
