--- a/Dusza-Fogadas/BetWindow.xaml
+++ b/Dusza-Fogadas/BetWindow.xaml
@@ -78,13 +78,14 @@
             Grid.ColumnSpan="4"/>
 
         <Label FontSize="25" VerticalAlignment="Center" FontWeight="Light" Grid.Row="2" Grid.Column="1">Game Name</Label>
-        <ComboBox x:Name="cbGame" SelectionChanged="cbGame_SelectionChanged" FontSize="25" Grid.Column="2" Height="50" Margin="10 0 10 0" Grid.Row="2" BorderBrush="#6b6b6b" BorderThickness="1" Background="#e6e6e6" FontWeight="Light" VerticalContentAlignment="Center"></ComboBox>
+        <ComboBox x:Name="cbGame" SelectionChanged="cbGame_SelectionChanged" FontSize="25" Grid.Column="2" Height="50" Margin="10 0 10 0" Grid.Row="2" 
+BorderThickness="1" Background="#e6e6e6" FontWeight="Light" VerticalContentAlignment="Center"></ComboBox>
 
         <Label FontSize="25" VerticalAlignment="Center" FontWeight="Light" Grid.Row="3" Grid.Column="1">Subject</Label>
-        <ComboBox x:Name="cbSubject" IsEnabled="False" SelectionChanged="CheckIfCanBetCB" FontSize="25" Grid.Column="2"  Height="50" Margin="10 0 10 0" Grid.Row="3" BorderBrush="#6b6b6b" BorderThickness="1" Background="#e6e6e6" FontWeight="Light" VerticalContentAlignment="Center"></ComboBox>
+        <ComboBox x:Name="cbSubject" IsEnabled="False" SelectionChanged="CheckIfCanBetCB" FontSize="25" Grid.Column="2"  Height="50" Margin="10 0 10 0" Grid.Row="3" BorderThickness="1"  FontWeight="Light" VerticalContentAlignment="Center"></ComboBox>
 
         <Label FontSize="25" VerticalAlignment="Center" FontWeight="Light" Grid.Row="4" Grid.Column="1">Event</Label>
-        <ComboBox x:Name="cbEvent" IsEnabled="False" SelectionChanged="CheckIfCanBetCB" FontSize="25" Grid.Column="2" Height="50" Margin="10 0 10 0" Grid.Row="4" BorderBrush="#6b6b6b" BorderThickness="1" Background="#e6e6e6" FontWeight="Light" VerticalContentAlignment="Center"></ComboBox>
+        <ComboBox x:Name="cbEvent" IsEnabled="False" SelectionChanged="CheckIfCanBetCB" FontSize="25" Grid.Column="2" Height="50" Margin="10 0 10 0" Grid.Row="4" BorderThickness="1" FontWeight="Light" VerticalContentAlignment="Center"></ComboBox>
 
         <Label FontSize="25" VerticalAlignment="Center" FontWeight="Light" Grid.Row="5" Grid.Column="1">Outcome</Label>
         <TextBox x:Name="txtOutcome" IsEnabled="False" VerticalContentAlignment="Center"  TextChanged="CheckIfCanBetTXT" FontSize="25" Grid.Column="2" Height="50" Margin="10 0 10 0" Grid.Row="5"  Template="{StaticResource txtTemplate}" FontWeight="Light"></TextBox>
