--- a/Dusza-Fogadas/GameStatisticsWindow.xaml
+++ b/Dusza-Fogadas/GameStatisticsWindow.xaml
@@ -5,11 +5,11 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Dusza_Fogadas"
         mc:Ignorable="d"
-        Title="GameStatisticsWindow" Height="450" Width="800">
-    <Grid>
+        Title="GameStatisticsWindow" Height="450" Width="600">
+    <Grid Background="#f5f5f5">
         <Grid.RowDefinitions>
-            <RowDefinition Height="auto"/>
-            <RowDefinition/>
+            <RowDefinition Height="1*"/>
+            <RowDefinition Height="5*"/>
         </Grid.RowDefinitions>
 
         <local:Header
@@ -17,6 +17,23 @@
         <DataGrid x:Name="dgStatistics"
           CanUserAddRows="False"
           IsReadOnly="True"
-          Grid.Row="1"/>
+          Grid.Row="1"
+          Background="#e6e6e6"
+          Margin="10 15 10 10"
+          BorderBrush="#6b6b6b">
+            <DataGrid.Resources>
+                <Style BasedOn="{StaticResource {x:Type DataGridColumnHeader}}" TargetType="{x:Type DataGridColumnHeader}" >
+                    <Setter Property="Background" Value="#f2f2f2"/>
+                    <Setter Property="BorderBrush" Value="Black"/>
+                    <Setter Property="BorderThickness" Value="0 0 0.5 1"/>
+                    <Setter Property="Margin" Value="0 0 0 0" />
+                    <Setter Property="Padding" Value="5 0 5 0"></Setter>
+                    <Setter Property="Height" Value="20" />
+                    <Setter Property="Width" Value="auto"/>
+                    <Setter Property="HorizontalContentAlignment" Value="Center"/>
+                </Style>
+            </DataGrid.Resources>
+        </DataGrid>
+
     </Grid>
 </Window>
