--- a/Dusza-Fogadas/NewGame.xaml
+++ b/Dusza-Fogadas/NewGame.xaml
@@ -56,7 +56,7 @@
         <Grid.RowDefinitions>
             <RowDefinition Height="1.3*"></RowDefinition>
             <RowDefinition Height="1*"></RowDefinition>
-            <RowDefinition Height="0.9*"></RowDefinition>
+            <RowDefinition Height="0.8*"></RowDefinition>
             <RowDefinition Height="0.9*"></RowDefinition>
             <RowDefinition Height="3*"></RowDefinition>
             <RowDefinition Height="1*"></RowDefinition>
@@ -77,7 +77,7 @@
         </StackPanel>
 
 
-        <Label FontSize="25" Grid.Row="2" FontWeight="Light" HorizontalAlignment="Center" VerticalAlignment="Center">Subjects</Label>
+        <Label FontSize="25" Grid.Row="2" FontWeight="Light" HorizontalAlignment="Center" VerticalAlignment="Bottom">Subjects</Label>
 
         <DockPanel Grid.Row="3" HorizontalAlignment="Stretch" VerticalAlignment="Center" Margin="15 0 15 0">
             <Button x:Name="btnSubjectAdd" 
@@ -96,7 +96,7 @@
                      FontSize="17"/>
         </DockPanel>
 
-        <Label FontSize="25" FontWeight="Light" Grid.Row="2" Grid.Column="1" HorizontalAlignment="Center" VerticalAlignment="Center">Events</Label>
+        <Label FontSize="25" FontWeight="Light" Grid.Row="2" Grid.Column="1" HorizontalAlignment="Center" VerticalAlignment="Bottom">Events</Label>
 
         <DockPanel Grid.Row="3" Grid.Column="1" HorizontalAlignment="Stretch" VerticalAlignment="Center" Margin="15 0 15 0">
             <Button x:Name="btnEventAdd" 
@@ -116,19 +116,33 @@
         </DockPanel>
 
 
-        <ListBox x:Name="lbSubjects" Grid.Row="4" FontWeight="Light" Background="LightGray" Margin="20 10 20 10">
+        <ListBox x:Name="lbSubjects" Background="#e6e6e6" BorderThickness="1" BorderBrush="#6b6b6b" Grid.Row="4" FontWeight="Light" Margin="20 10 20 10">
             <ListBox.ItemContainerStyle>
                 <Style TargetType="ListBoxItem">
                     <EventSetter Event="MouseDoubleClick" Handler="lbSubjects_MouseDoubleClick"/>
                 </Style>
             </ListBox.ItemContainerStyle>
+
+            <ListBox.Resources>
+                <Style TargetType="Border">
+                    <Setter Property="CornerRadius" Value="8"/>
+                </Style>
+            </ListBox.Resources>
         </ListBox>
-        <ListBox x:Name="lbEvents" Grid.Row="4" Grid.Column="1" FontWeight="Light" Background="LightGray" Margin="20 10 20 10">
+        
+        
+        <ListBox x:Name="lbEvents" Grid.Row="4" Background="#e6e6e6" BorderThickness="1" BorderBrush="#6b6b6b" Grid.Column="1" FontWeight="Light"  Margin="20 10 20 10">
             <ListBox.ItemContainerStyle>
                 <Style TargetType="ListBoxItem">
                     <EventSetter Event="MouseDoubleClick" Handler="lbEvents_MouseDoubleClick"/>
                 </Style>
             </ListBox.ItemContainerStyle>
+            
+            <ListBox.Resources>
+                <Style TargetType="Border">
+                    <Setter Property="CornerRadius" Value="8"/>
+                </Style>
+            </ListBox.Resources>
         </ListBox>
 
         <Button x:Name="btnCreateGame"  
