Statisztika ablakok designja készen

--- a/Dusza-Fogadas/BetStatisticsWindow.xaml
+++ b/Dusza-Fogadas/BetStatisticsWindow.xaml
@@ -5,22 +5,49 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Dusza_Fogadas"
         mc:Ignorable="d"
-        Title="BetStatisticsWindow" Height="450" Width="800">
-    <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="auto"/>
-            <RowDefinition Height="auto"/>
-            <RowDefinition/>
-        </Grid.RowDefinitions>
+        Title="BetStatisticsWindow" Height="600" Width="775">
+    <Border Background="#f5f5f5" Height="485" Width="675" BorderBrush="#2b2b2b" BorderThickness="1">
+        <Grid Background="#f5f5f5">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="1.2*"/>
+                <RowDefinition Height="0.8*"/>
+                <RowDefinition Height="5*"/>
+            </Grid.RowDefinitions>
 
-        <local:Header
-            Title="Game Statistics"/>
+            <local:Header
+            Title="Bet Statistics"/>
 
-        <ComboBox x:Name="cbGame"
-                  Grid.Row="1" SelectionChanged="cbGame_SelectionChanged"/>
-        <DataGrid x:Name="dgStatistics"
+            <ComboBox x:Name="cbGame"
+                  Grid.Row="1" 
+                  SelectionChanged="cbGame_SelectionChanged"
+                  Width="200"
+                  Margin="0 12 0 0"
+                  FontWeight="Light"
+                  VerticalContentAlignment="Center"
+                  FontSize="15"/>
+
+            <DataGrid x:Name="dgStatistics"
                 CanUserAddRows="False"
                 IsReadOnly="True"
-                Grid.Row="2"/>
-    </Grid>
+                Grid.Row="2"
+                Background="#e6e6e6"
+                Margin="10 15 10 10"
+                BorderBrush="#6b6b6b"
+                FontWeight="Light"
+                FontSize="15">
+                <DataGrid.Resources>
+                    <Style BasedOn="{StaticResource {x:Type DataGridColumnHeader}}" TargetType="{x:Type DataGridColumnHeader}" >
+                        <Setter Property="Background" Value="#f2f2f2"/>
+                        <Setter Property="BorderBrush" Value="Black"/>
+                        <Setter Property="BorderThickness" Value="0 0 1 1"/>
+                        <Setter Property="Margin" Value="0 0 0 0" />
+                        <Setter Property="Padding" Value="5 0 5 0"></Setter>
+                        <Setter Property="Height" Value="25" />
+                        <Setter Property="Width" Value="auto"/>
+                        <Setter Property="HorizontalContentAlignment" Value="Center"/>
+                    </Style>
+                </DataGrid.Resources>
+            </DataGrid>
+        </Grid>
+    </Border>
 </Window>
