kisebb változatások, szines gombok

--- a/Dusza-Fogadas/MainWindow.xaml
+++ b/Dusza-Fogadas/MainWindow.xaml
@@ -55,7 +55,7 @@
             <Border x:Name="Border" 
                     Background="#1c9e18"
                     BorderThickness="0" 
-                    CornerRadius="5">
+                    CornerRadius="7">
                 <ContentPresenter VerticalAlignment="Center" HorizontalAlignment="Center" Content="{TemplateBinding Content}"/>
             </Border>
             <ControlTemplate.Triggers>
@@ -100,8 +100,11 @@
                 <RowDefinition></RowDefinition>
                 <RowDefinition Height="0.5*"></RowDefinition>
 
-                <RowDefinition></RowDefinition>
-                <RowDefinition Height="1.1*"></RowDefinition>
+                <RowDefinition Height="1*"></RowDefinition>
+
+                <RowDefinition Height="0.3*"></RowDefinition>
+                
+                <RowDefinition Height="1.15*"></RowDefinition>
             </Grid.RowDefinitions>
 
             <Label x:Name="lblTitle" FontSize="30" VerticalAlignment="Center" HorizontalAlignment="Center" Content="Login"></Label>
@@ -162,14 +165,18 @@
 
             
             <!--Sign UP Button-->
-            <Label x:Name="lblDontHave" Grid.Row="11" FontSize="18" HorizontalAlignment="Center">Don't have an account yet?</Label>
+            <Label x:Name="lblDontHave" 
+                   Grid.Row="12" 
+                   FontSize="18" 
+                   HorizontalAlignment="Center">Don't have an account yet?</Label>
+            
             <Button x:Name="btnDontHave" 
                     Foreground="White" 
                     Click="btnDontHave_Click" 
-                    Grid.Row="11" 
+                    Grid.Row="12" 
                     FontSize="15" 
                     Height="25" 
-                    Margin="95 27 95 0" 
+                    Margin="95 35 95 0" 
                     Content="Sign up!"
                     Template="{StaticResource signupButton}">
              
@@ -177,14 +184,19 @@
 
 
             <!--Sign IN Button-->
-            <Label x:Name="lblAlreadyHave" Visibility="Collapsed" Grid.Row="11" FontSize="18" HorizontalAlignment="Center">Already have an account?</Label>
+            <Label x:Name="lblAlreadyHave" 
+                   Visibility="Collapsed" 
+                   Grid.Row="12" 
+                   FontSize="18" 
+                   HorizontalAlignment="Center">Already have an account?</Label>
+            
             <Button x:Name="btnAlreadyHave" 
                     Click="btnAlreadyHave_Click" 
                     Foreground="White" 
                     Visibility="Collapsed"
-                    Grid.Row="11" 
+                    Grid.Row="12" 
                     FontSize="15" 
-                    Margin="95 27 95 0" 
+                    Margin="95 35 95 0" 
                     Height="25" 
                     Content="Sign in!"
                     Template="{StaticResource signupButton}">
