--- a/Dusza-Fogadas/BetWindow.xaml
+++ b/Dusza-Fogadas/BetWindow.xaml
@@ -36,6 +36,25 @@
                 </Trigger>
             </ControlTemplate.Triggers>
         </ControlTemplate>
+
+        <ControlTemplate x:Key="onoffButton" TargetType="{x:Type Button}">
+            <Border x:Name="Border" 
+            Background="#1c9e18"
+            BorderThickness="0" 
+            CornerRadius="5">
+                <ContentPresenter VerticalAlignment="Center" HorizontalAlignment="Center" Content="{TemplateBinding Content}"/>
+            </Border>
+            <ControlTemplate.Triggers>
+                <Trigger Property="IsMouseOver" Value="True">
+                    <Setter Property="Background" Value="#218a1d" TargetName="Border" />
+                </Trigger>
+                <Trigger Property="IsEnabled" Value="False">
+                    <Setter TargetName="Border" Property="Background" Value="#cc4141"></Setter>
+                    <Setter Property="Foreground" Value="#f5f5f5"></Setter>
+                    <Setter Property="Opacity" Value="0.75"></Setter>
+                </Trigger>
+            </ControlTemplate.Triggers>
+        </ControlTemplate>
     </Window.Resources>
 
 
@@ -55,8 +74,8 @@
             <RowDefinition Height="1*"></RowDefinition>
             <RowDefinition Height="1*"></RowDefinition>
             <RowDefinition Height="1*"></RowDefinition>
-            <RowDefinition Height="0.5*"></RowDefinition>
-            <RowDefinition Height="1*"></RowDefinition>
+            <RowDefinition Height="0.3*"></RowDefinition>
+            <RowDefinition Height="1.1*"></RowDefinition>
         </Grid.RowDefinitions>
 
         <local:Header
@@ -80,33 +99,20 @@ BorderThickness="1" Background="#e6e6e6" FontWeight="Light" VerticalContentAlign
         <Label FontSize="25" VerticalAlignment="Center" FontWeight="Light" Grid.Row="6" Grid.Column="1">Points</Label>
         <TextBox x:Name="txtBetAmount" IsEnabled="False" VerticalContentAlignment="Center" TextChanged="CheckIfCanBetTXT" FontSize="25" Grid.Column="2" Height="50" Margin="10 0 10 0" Grid.Row="6"  Template="{StaticResource txtTemplate}" FontWeight="Light"></TextBox>
 
-        <Button x:Name="btnBet" Click="btnBet_Click" IsEnabled="False" FontWeight="Light" Grid.Row="8" Grid.Column="1" Grid.ColumnSpan="2" Width="200" Height="50" FontSize="25">Bet
-            <Button.Resources>
-                <Style TargetType="{x:Type Border}">
-                    <Setter Property="CornerRadius" Value="5"/>
-                </Style>
-            </Button.Resources>
-            <Button.Style>
-                <Style TargetType="{x:Type Button}">
-                    <Setter Property="Template">
-                        <Setter.Value>
-                            <ControlTemplate TargetType="{x:Type Button}">
-                                <Border x:Name="Border" BorderThickness="1" BorderBrush="#6b6b6b" Background="{TemplateBinding Background}">
-                                    <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center" />
-                                </Border>
-                                <ControlTemplate.Triggers>
-                                    <Trigger Property="IsMouseOver" Value="True">
-                                        <Setter Property="Background" Value="#d1d1d1" TargetName="Border" />
-                                    </Trigger>
-                                    <Trigger Property="IsEnabled" Value="False">
-                                        <Setter Property="Opacity" Value="0.5"></Setter>
-                                    </Trigger>
-                                </ControlTemplate.Triggers>
-                            </ControlTemplate>
-                        </Setter.Value>
-                    </Setter>
-                </Style>
-            </Button.Style>
+        <Button x:Name="btnBet" 
+                Click="btnBet_Click" 
+                IsEnabled="False" 
+                FontWeight="Light" 
+                Grid.Row="8" 
+                Grid.Column="1" 
+                Grid.ColumnSpan="2"
+                Width="225" 
+                Height="55" 
+                FontSize="25"
+                Foreground="#f5f5f5"
+                Template="{StaticResource onoffButton}"
+                Margin="0 0 0 10">Bet
+            
         </Button>
 
     </Grid>
