--- a/Dusza-Fogadas/NewGame.xaml
+++ b/Dusza-Fogadas/NewGame.xaml
@@ -48,6 +48,25 @@
                 </Trigger>
             </ControlTemplate.Triggers>
         </ControlTemplate>
+
+        <ControlTemplate x:Key="onoffButton" TargetType="{x:Type Button}">
+            <Border x:Name="Border" 
+            Background="#1c9e18"
+            BorderThickness="0" 
+            CornerRadius="5">
+                <ContentPresenter VerticalAlignment="Center" HorizontalAlignment="Center" Content="{TemplateBinding Content}"/>
+            </Border>
+            <ControlTemplate.Triggers>
+                <Trigger Property="IsMouseOver" Value="True">
+                    <Setter Property="Background" Value="#218a1d" TargetName="Border" />
+                </Trigger>
+                <Trigger Property="IsEnabled" Value="False">
+                    <Setter TargetName="Border" Property="Background" Value="#cc4141"></Setter>
+                    <Setter Property="Foreground" Value="#f5f5f5"></Setter>
+                    <Setter Property="Opacity" Value="0.75"></Setter>
+                </Trigger>
+            </ControlTemplate.Triggers>
+        </ControlTemplate>
     </Window.Resources>
 
 
@@ -55,11 +74,11 @@
     <Grid Background="#f5f5f5">
         <Grid.RowDefinitions>
             <RowDefinition Height="1.3*"></RowDefinition>
-            <RowDefinition Height="1*"></RowDefinition>
-            <RowDefinition Height="0.8*"></RowDefinition>
-            <RowDefinition Height="0.9*"></RowDefinition>
+            <RowDefinition Height="0.95*"></RowDefinition>
+            <RowDefinition Height="0.57*"></RowDefinition>
+            <RowDefinition Height="0.6*"></RowDefinition>
             <RowDefinition Height="3*"></RowDefinition>
-            <RowDefinition Height="1*"></RowDefinition>
+            <RowDefinition Height="1.15*"></RowDefinition>
         </Grid.RowDefinitions>
 
         <Grid.ColumnDefinitions>
@@ -71,13 +90,18 @@
             Title="Game Creation"
             Grid.ColumnSpan="2"/>
 
-        <StackPanel Margin="0 15 0 0" Orientation="Horizontal" Grid.Row="1" Grid.ColumnSpan="2" HorizontalAlignment="Center" VerticalAlignment="Center">
+        <StackPanel Margin="0 0 0 0" Orientation="Horizontal" Grid.Row="1" Grid.ColumnSpan="2" HorizontalAlignment="Center" VerticalAlignment="Center">
             <Label FontSize="25" FontWeight="Light" Margin="0 0 15 0">Game Name:</Label>
             <TextBox x:Name="txtGameName" FontWeight="Light" TextChanged="isValidName" Template="{StaticResource txtTemplate}" VerticalContentAlignment="Center" FontSize="25" Width="275" Background="LightGray"></TextBox>
         </StackPanel>
 
 
-        <Label FontSize="25" Grid.Row="2" FontWeight="Light" HorizontalAlignment="Center" VerticalAlignment="Bottom">Subjects</Label>
+        <Label FontSize="25" 
+               Grid.Row="2" 
+               FontWeight="Light" 
+               HorizontalAlignment="Center" 
+               VerticalAlignment="Bottom"
+               Margin="0 0 0 0">Subjects</Label>
 
         <DockPanel Grid.Row="3" HorizontalAlignment="Stretch" VerticalAlignment="Center" Margin="15 0 15 0">
             <Button x:Name="btnSubjectAdd" 
@@ -96,7 +120,12 @@
                      FontSize="17"/>
         </DockPanel>
 
-        <Label FontSize="25" FontWeight="Light" Grid.Row="2" Grid.Column="1" HorizontalAlignment="Center" VerticalAlignment="Bottom">Events</Label>
+        <Label FontSize="25" 
+               FontWeight="Light"
+               Grid.Row="2" 
+               Grid.Column="1" 
+               HorizontalAlignment="Center" 
+               VerticalAlignment="Bottom">Events</Label>
 
         <DockPanel Grid.Row="3" Grid.Column="1" HorizontalAlignment="Stretch" VerticalAlignment="Center" Margin="15 0 15 0">
             <Button x:Name="btnEventAdd" 
@@ -116,7 +145,14 @@
         </DockPanel>
 
 
-        <ListBox x:Name="lbSubjects" Background="#e6e6e6" BorderThickness="1" BorderBrush="#6b6b6b" Grid.Row="4" FontWeight="Light" Margin="20 10 20 10">
+        <ListBox x:Name="lbSubjects" 
+                 Background="#e6e6e6" 
+                 BorderThickness="1" 
+                 BorderBrush="#6b6b6b" 
+                 Grid.Row="4" 
+                 FontWeight="Light" 
+                 Margin="20 10 20 10"
+                 FontSize="16">
             <ListBox.ItemContainerStyle>
                 <Style TargetType="ListBoxItem">
                     <EventSetter Event="MouseDoubleClick" Handler="lbSubjects_MouseDoubleClick"/>
@@ -125,13 +161,21 @@
 
             <ListBox.Resources>
                 <Style TargetType="Border">
-                    <Setter Property="CornerRadius" Value="8"/>
+                    <Setter Property="CornerRadius" Value="3"/>
                 </Style>
             </ListBox.Resources>
         </ListBox>
         
         
-        <ListBox x:Name="lbEvents" Grid.Row="4" Background="#e6e6e6" BorderThickness="1" BorderBrush="#6b6b6b" Grid.Column="1" FontWeight="Light"  Margin="20 10 20 10">
+        <ListBox x:Name="lbEvents" 
+                 Grid.Row="4" 
+                 Background="#e6e6e6" 
+                 BorderThickness="1" 
+                 BorderBrush="#6b6b6b" 
+                 Grid.Column="1" 
+                 FontWeight="Light" 
+                 Margin="20 10 20 10"
+                 FontSize="16">
             <ListBox.ItemContainerStyle>
                 <Style TargetType="ListBoxItem">
                     <EventSetter Event="MouseDoubleClick" Handler="lbEvents_MouseDoubleClick"/>
@@ -140,21 +184,23 @@
             
             <ListBox.Resources>
                 <Style TargetType="Border">
-                    <Setter Property="CornerRadius" Value="8"/>
+                    <Setter Property="CornerRadius" Value="3"/>
                 </Style>
             </ListBox.Resources>
         </ListBox>
 
         <Button x:Name="btnCreateGame"  
                 FontWeight="Light" 
-                Click="btnCreateGame_Click" 
-                Width="200" 
+                Click="btnCreateGame_Click"               
                 Height="55" 
+                Width="225"
                 FontSize="20" 
                 Grid.Row="5" 
                 Grid.ColumnSpan="2"
                 IsEnabled="False"
-                Template="{StaticResource normalButton}">Create Game
+                Foreground="#f5f5f5"
+                Template="{StaticResource onoffButton}"
+                Margin="0 0 0 5">Create Game
         </Button>
     </Grid>
 </Window>
