--- a/Dusza-Fogadas/MainWindow.xaml
+++ b/Dusza-Fogadas/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Dusza_Fogadas"
         mc:Ignorable="d"
-        Title="MainWindow" Height="670" Width="470">
+        Title="" Height="670" Width="470">
 
     <Window.Resources>
         <ControlTemplate x:Key="passwordbox" TargetType="{x:Type PasswordBox}">
