--- a/Dusza-Fogadas/Rankings.xaml
+++ b/Dusza-Fogadas/Rankings.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Dusza_Fogadas"
         mc:Ignorable="d"
-        Title="Rankings" Height="600" Width="775">
+        Title="" Height="600" Width="775">
 
     <Border Background="#f5f5f5" Height="485" Width="675" BorderBrush="#2b2b2b" BorderThickness="1">
         <Grid Background="#f5f5f5">
