--- a/Dusza-Fogadas/BetWindow.xaml
+++ b/Dusza-Fogadas/BetWindow.xaml
@@ -111,7 +111,8 @@ BorderThickness="1" Background="#e6e6e6" FontWeight="Light" VerticalContentAlign
                 FontSize="25"
                 Foreground="#f5f5f5"
                 Template="{StaticResource onoffButton}"
-                Margin="0 0 0 10">Bet
+                Margin="0 0 0 10"
+                Cursor="Hand">Bet
             
         </Button>
 
