--- a/Dusza-Fogadas/BetWindow.xaml
+++ b/Dusza-Fogadas/BetWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Dusza_Fogadas"
         mc:Ignorable="d"
-        Title="" Height="600" Width="775">
+        Title="" Height="650" Width="775">
 
     <Window.Resources>
         <ControlTemplate x:Key="txtTemplate" TargetType="{x:Type TextBoxBase}">
@@ -55,6 +55,21 @@
                 </Trigger>
             </ControlTemplate.Triggers>
         </ControlTemplate>
+
+        <ControlTemplate x:Key="xButton" TargetType="{x:Type Button}">
+            <Border x:Name="Border" 
+             Background="#d95050"
+             BorderBrush="#820000"
+             BorderThickness="2" 
+             CornerRadius="3">
+                <ContentPresenter VerticalAlignment="Center" HorizontalAlignment="Center" Content="{TemplateBinding Content}"/>
+            </Border>
+            <ControlTemplate.Triggers>
+                <Trigger Property="IsMouseOver" Value="True">
+                    <Setter Property="Background" Value="#b53131" TargetName="Border" />
+                </Trigger>
+            </ControlTemplate.Triggers>
+        </ControlTemplate>
     </Window.Resources>
 
 
@@ -74,8 +89,8 @@
             <RowDefinition Height="1*"></RowDefinition>
             <RowDefinition Height="1*"></RowDefinition>
             <RowDefinition Height="1*"></RowDefinition>
-            <RowDefinition Height="0.3*"></RowDefinition>
             <RowDefinition Height="1.1*"></RowDefinition>
+            <RowDefinition Height="0.9*"></RowDefinition>
         </Grid.RowDefinitions>
 
         <local:Header
@@ -99,6 +114,42 @@ BorderThickness="1" Background="#e6e6e6" FontWeight="Light" VerticalContentAlign
         <Label FontSize="25" VerticalAlignment="Center" FontWeight="Light" Grid.Row="6" Grid.Column="1">Points</Label>
         <TextBox x:Name="txtBetAmount" IsEnabled="False" Padding="5 0 0 0" VerticalContentAlignment="Center" TextChanged="CheckIfCanBetTXT" FontSize="25" Grid.Column="2" Height="50" Margin="10 0 10 0" Grid.Row="6"  Template="{StaticResource txtTemplate}" FontWeight="Light"></TextBox>
 
+        <Border x:Name="UserNotFound" 
+        Grid.Row="7"
+        Grid.ColumnSpan="4" 
+        Padding="5 0 15 0"
+        BorderThickness="2"
+        BorderBrush="#820000"
+        Margin="20 0 20 0"
+        Height="70"
+        CornerRadius="3"
+        Opacity="0.85"
+        Background="#eb6c6c"
+        HorizontalAlignment="Center"
+        Visibility="Collapsed">
+            <StackPanel Orientation="Horizontal">
+                <Label VerticalContentAlignment="Center"
+               FontSize="20"
+               HorizontalAlignment="Stretch"
+               Opacity="1"
+               Foreground="#820000">A game with this name already exists!</Label>
+                <Button x:Name="btnCloseUserNotFound" 
+                Click="btnCloseUserNotFound_Click"
+                VerticalAlignment="Center" 
+                VerticalContentAlignment="Center"
+                HorizontalAlignment="Right"
+                Width="33"
+                Height="33"
+                Foreground="#820000"
+                Opacity="1"
+                FontWeight="ExtraBold"
+                Template="{StaticResource xButton}"
+                Cursor="Hand">X</Button>
+            </StackPanel>
+        </Border>
+
+
+
         <Button x:Name="btnBet" 
                 Click="btnBet_Click" 
                 IsEnabled="False" 
@@ -111,7 +162,7 @@ BorderThickness="1" Background="#e6e6e6" FontWeight="Light" VerticalContentAlign
                 FontSize="25"
                 Foreground="#f5f5f5"
                 Template="{StaticResource onoffButton}"
-                Margin="0 0 0 10"
+                Margin="0 0 0 0"
                 Cursor="Hand">Bet
             
         </Button>
